--- a/examples/index1.html
+++ b/examples/index1.html
@@ -23,7 +23,9 @@
   <div class="ui vertical feature segment">
    
     <h1 class="ui centered header">
-            自我 <img src="images/logo.png"> 介绍
+      <img src="images/wei.png"> 
+             <img src="images/wl.png" style="margin-left:3rem; margin-right:3rem"> 
+             <img src="images/lai.png"> 
     </h1>
   
 
