--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+  <link rel="icon" href="favicon.png">
   <!-- Site Properities -->
-  <title>Homepage Example - Semantic</title>
+  <title>卫来的博客</title>
 
   <link rel="stylesheet" type="text/css" href="dist/semantic.css">
   <link rel="stylesheet" type="text/css" href="examples/homepage.css">
@@ -20,13 +21,15 @@
 <body id="home">
 
 
-  <div class="ui vertical feature segment">
+  <div class="ui vertical feature segment" style="background-image: url(examples/images/bg3.jpg);">
    
     <h1 class="ui centered header">
-            自我 <img src="examples/images/logo.png"> 介绍
+       <img src="examples/images/wei.png"> 
+       <img src="examples/images/wl.png" style="margin-left:3rem; margin-right:3rem"> 
+       <img src="examples/images/lai.png"> 
     </h1>
   
-
+<div class="ui hidden huge header divider"></div>
 
 
     <div class="ui centered page grid" style="padding-left:6em; padding-right:6em">
@@ -38,9 +41,11 @@
               <h2>卫 来</h2>
             </div>
             <img src="examples/images/portrait.jpg" class="ui circular right floated image" style="max-width:100%">
-            <h4>
-              喜欢有挑战性的工作。善于换位思考，从多角度思考问题，喜欢跟各行各业的人打交道。不喜欢大公司的朝九晚五，为了某些指标做些没价值的东西。
-            </h4>
+            <h4>在艺术之都学习电子工程的产品经理</h4>
+            <h4>追求极致的产品设计和用户体验</h4>
+            <h4>致力创造为生活增添便利和快乐的产品</h4>
+
+
           </div>
 
           <div class="column " style="padding-left:50px">
@@ -74,7 +79,7 @@
             <h2> 工作 <i class="travel icon"></i></h2>
               <h3>豆腐科技</h3>
               <h4>2014.8 ~ 2015.3</h4>
-              <h4>自主创业，智能硬件和互联网产品，模块化电子积木和Verycine产品。</h4>
+              <h4>创业项目，智能硬件和互联网产品，模块化电子积木和Verycine。</h4>
 
               <h3>猎豹移动</h3>
               <h4>2014.3 ~ 2014.8</h4>
@@ -86,11 +91,11 @@
 
               <h3>V.V.R.咨询管理</h3>
               <h4>2012.10 ~ 2013.10</h4>
-              <h4>从事项目管理工作，与客户协调沟通，帮助法国企业在华成立分公司。</h4>
+              <h4>从事项目管理工作，与客户协调沟通，寻找甄别供应商，帮助法国企业开发中国市场。</h4>
 
               <h3>法国D.E.F.消防警报设备</h3>
               <h4>2012.4 ~ 2012.10</h4>
-              <h4>台山核电站消防监测设备产品测试，撰写产品测试和现场安装调试流程。</h4>
+              <h4>台山核电站消防监测项目工程师，负责产品检测流程。</h4>
 
           </div>
 
@@ -102,6 +107,31 @@
 
             <h2><i class="lab icon"></i> 技能</h2>
 
+
+            <h4> Sketch 3
+              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="90" id="example2">
+                <div class="bar" >
+                  <div class="progress"></div>
+                </div>
+              </div>
+            </h4>
+
+            <h4> Axure
+              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="80" id="example4">
+                <div class="bar" >
+                  <div class="progress"></div>
+                </div>
+              </div>
+            </h4>
+
+            <h4> Visio
+              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="80" id="example5">
+                <div class="bar" >
+                  <div class="progress"></div>
+                </div>
+              </div>
+            </h4>
+
             <h4> C/C++ (嵌入式开发)
               <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="80" id="example1">
                 <div class="bar" >
@@ -110,16 +140,8 @@
               </div>
             </h4>
 
-            <h4> Sketch 3
-              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="70" id="example2">
-                <div class="bar" >
-                  <div class="progress"></div>
-                </div>
-              </div>
-            </h4>
-
             <h4> HTML/JS
-              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="50" id="example3">
+              <div class="ui indicating small teal progress" style="margin-right:0rem" data-percent="60" id="example3">
                 <div class="bar" >
                   <div class="progress"></div>
                 </div>
@@ -138,19 +160,19 @@
             <h2><i class="heart icon"></i> 爱好</h2>
 
             <div class="ui tag labels">
-              <a class="ui label">
+              <a class="ui blue label">
                 足球
               </a>
-              <a class="ui label">
+              <a class="ui teal label">
                 电子竞技
               </a>
-              <a class="ui label">
+              <a class="ui orange label">
                 创客活动
               </a>
-              <a class="ui label">
+              <a class="ui red label">
                 电子产品
               </a>
-              <a class="ui label">
+              <a class="ui yellow label">
                 口琴
               </a>
 
