--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <div class="ui vertical feature segment" style="background-image: url(examples/images/bg3.jpg);">
    
     <h1 class="ui centered header">
-       <img src="examples/images/wei.png"> 
+       <img src="http://i3.tietuku.com/af89e4b187bfad5f.png"> 
        <img src="examples/images/wl.png" style="margin-left:3rem; margin-right:3rem"> 
-       <img src="examples/images/lai.png"> 
+       <img src="http://i3.tietuku.com/49fbef84cadb476e.png">
     </h1>
   
 <div class="ui hidden huge header divider"></div>
