--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <link rel="icon" href="favicon.png">
+  <link rel="icon" href="favicon1.png">
   <!-- Site Properities -->
   <title>卫来的博客</title>
 
