--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
    
     <h1 class="ui centered header">
        <img src="http://i3.tietuku.com/af89e4b187bfad5f.png"> 
-       <img src="examples/images/wl.png" style="margin-left:3rem; margin-right:3rem"> 
+       <img src="examples/images/wl.png" style="margin-left:2rem; margin-right:2rem"> 
        <img src="http://i3.tietuku.com/49fbef84cadb476e.png">
     </h1>
   
-<div class="ui hidden huge header divider"></div>
+    <div class="ui hidden huge header divider"></div>
 
 
     <div class="ui centered page grid" style="padding-left:6em; padding-right:6em">
-      <div class="twelve wide column">
+      <div class="fourteen wide column">
         <div class="ui two column stackable divided grid">
 
           <div class="column right aligned" style="padding-right:50px">
@@ -72,7 +72,7 @@
     </div>
 
     <div class="ui centered page grid" style="padding-left:2rem; padding-right:2rem">
-      <div class="ten wide column">
+      <div class="twelve wide column">
         <div class="ui two column stackable divided grid">
 
           <div class="column right aligned" style="padding-right:50px">
@@ -200,7 +200,7 @@
 
 
     <div class="ui centered page grid" style="padding-left:2rem; padding-right:2rem">
-      <div class="fourteen wide column">
+      <div class="column">
         <div class="ui two column stackable grid">
 
           <div class="column" style="padding:2rem 2rem 2rem 2rem">
